Bug 1333112 - Fix windowClient.Navigate leak. r=bkelly